--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "1.0.0",
   "description": "Event Identifier library for AWS Lambda",
   "main": "lib/index.js",
+  "engines": {
+    "node": ">=4.3.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vandium-io/lambda-event-identifier.git"
+  },
   "scripts": {
     "test": "./node_modules/.bin/mocha --recursive",
     "coverage": "./node_modules/.bin/istanbul cover node_modules/mocha/bin/_mocha -- -R spec --recursive"
   },
-  "author": "Vandium Software, Inc.",
-  "license": "ISC",
+  "author": "Vandium Software Inc.",
+  "license": "BSD-3-Clause",
   "devDependencies": {
     "chai": "^3.5.0",
     "istanbul": "^0.4.5",
