--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: node_js
 node_js:
-  - "6.1"
+  - "6.10"
 install:
-  - nvm use 6.1
   - npm install
-script: npm run coverage
+script: npm test
